// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should not render the component if onClick is undefined and type not submit 1`] = `""`;

exports[`Button should not render the component if text and iconName are blank 1`] = `""`;

exports[`Button should not render the component if text and iconName are undefined 1`] = `""`;

exports[`Button should render the component correctly with text and icon 1`] = `
<button
  className="Button myClassname "
  disabled={false}
  onClick={[Function]}
  title=""
  type="button"
>
  <div
    className="Button__icon myClassname__icon "
  >
    <Icon
      className=""
      name="chevron-up"
    />
  </div>
  <div
    className="Button__text myClassname__text "
  >
    Mytext
  </div>
</button>
`;

exports[`Button should render the component for disabled state 1`] = `
<button
  className="Button myClassname Button--disabled myClassname--disabled"
  disabled={true}
  onClick={[Function]}
  title=""
  type="button"
>
  <div
    className="Button__icon myClassname__icon Button__icon--disabled myClassname__icon--disabled"
  >
    <Icon
      className=""
      name="chevron-up"
    />
  </div>
  <div
    className="Button__text myClassname__text Button__text--disabled myClassname__text--disabled"
  >
    Mytext
  </div>
</button>
`;

exports[`Button should render the component for loading state 1`] = `
<button
  className="Button myClassname "
  disabled={true}
  onClick={[Function]}
  title=""
  type="button"
>
  <div
    className="Button__icon myClassname__icon "
  >
    <Icon
      className="fa-spin"
      name="spinner"
    />
  </div>
  <div
    className="Button__text myClassname__text "
  >
    Mytext
  </div>
</button>
`;

exports[`Button should render the component if onClick is undefined and type is submit 1`] = `
<button
  className="Button myClassname "
  disabled={false}
  title=""
  type="submit"
>
  <div
    className="Button__text myClassname__text "
  >
    Mytext
  </div>
</button>
`;

exports[`Button should render the component without icon if text is defined and not blank 1`] = `
<button
  className="Button myClassname "
  disabled={false}
  onClick={[Function]}
  title=""
  type="button"
>
  <div
    className="Button__text myClassname__text "
  >
    Mytext
  </div>
</button>
`;

exports[`Button should render the component without text if iconName is defined and not blank 1`] = `
<button
  className="Button myClassname "
  disabled={false}
  onClick={[Function]}
  title=""
  type="button"
>
  <div
    className="Button__icon myClassname__icon "
  >
    <Icon
      className=""
      name="chevron-up"
    />
  </div>
</button>
`;
